# klinika

./: .env.example  .gitignore  Dockerfile  INSTALL_uz.md  LICENSE  README.md  SPEC.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  start-network.bat
deploy/: clinic-lor.service  nginx.conf
docs/: architecture.md  build_instructions.md  complaints_catalog.md  database_schema.md  deployment.md  lor_status_catalog.md  network_access.md  template_placeholders.md  testing_checklist.md  web_usage.md
scripts/: __init__.py  backup.py  build_exe.py  build_reception_template.py  build_template_assets.py  convert_uz_cyrillic.py  seed_data.py
src/clinic/: config.py  main.py
src/clinic/catalogs/: address.json  complaints.json  discharge_types.json  lor_status.json
src/clinic/db/: database.py  models.py  repository.py
src/clinic/domain/: __init__.py  cashier_service.py  catalog_loader.py  clinic_info_service.py  complaint_catalog_service.py  custom_catalog_service.py  doctor_service.py  dto.py  lor_catalog_service.py  patient_service.py  reception_service.py  service_catalog_service.py  service_service.py  settings_service.py  stats_service.py  template_service.py  user_service.py
src/clinic/i18n/: ru.json  translator.py  uz.json
src/clinic/infrastructure/: backup.py  logging_setup.py  translit.py  validators.py
src/clinic/printing/: __init__.py  common.py  docx_builder.py  receipt_builder.py  stats_export.py  text_composer.py
src/clinic/ui/: app.py  language_dialog.py  main_window.py  printing_helpers.py
src/clinic/ui/cashier/: __init__.py  patient_picker.py  stats_widget.py  window.py
src/clinic/ui/patients/: __init__.py  patient_card.py  stats_widget.py  window.py
src/clinic/ui/reception/: __init__.py  complaints_widget.py  lor_status_widget.py  patient_widget.py  window.py
src/clinic/ui/settings/: __init__.py  backup_widget.py  catalogs_tab.py  clinic_tab.py  doctors_tab.py  services_tab.py  window.py
src/clinic/ui/widgets/: chart_canvas.py  collapsible.py  date_range.py  edit_dialogs.py
src/clinic/web/: __init__.py  app.py  auth.py  config.py  dependencies.py  deps.py  main.py  security.py
src/clinic/web/routers/: __init__.py  auth.py  cashier.py  home.py  patients.py  print.py  reception.py  settings.py  stats.py
src/clinic/web/routes/: cashier.py  home.py  language.py  patients.py  reception.py  settings.py
src/clinic/web/static/css/: app.css
src/clinic/web/static/js/: app.js
src/clinic/web/templates/: base.html  forbidden.html  home.html  language_select.html  login.html  placeholder.html
src/clinic/web/templates/cashier/: _patient_picker.html  index.html  landing.html  patient.html  print_list.html  receipt.html  statistics.html
src/clinic/web/templates/errors/: 404.html
src/clinic/web/templates/partials/: lang_switcher.html  period_picker.html
src/clinic/web/templates/patients/: detail.html  index.html  list.html  print_list.html  show.html  statistics.html
src/clinic/web/templates/reception/: _lor_status.html  _patient_suggestions.html  detail.html  form.html  preview.html  print_preview.html
src/clinic/web/templates/settings/: _layout.html  backup.html  catalogs.html  clinic.html  complaints.html  doctors.html  index.html  lor_status.html  services.html  template.html  users.html
templates/: reception_template.docx  Шаблон.docx
templates/assets/: README.md
tests/: conftest.py  test_backup.py  test_cashier_service.py  test_doctor_service.py  test_docx_builder.py  test_full_flow.py  test_lor_status.py  test_patient_service.py  test_receipt_builder.py  test_reception.py  test_reception_service.py  test_reception_template_rules.py  test_service_service.py  test_smoke.py  test_stats_export.py  test_stats_service.py  test_text_composer.py  test_validators.py  test_web.py  test_web_phase2.py  test_web_phase3.py  test_web_phase4.py  test_web_phase5.py  test_web_phase6.py  test_web_phase9.py  test_web_smoke.py
(+3 files in other folders)
