[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinic-lor-desktop"
version = "0.1.0"
description = "LOR klinikasi uchun desktop dasturi (uz/ru)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Arislanars", email = "arislanars06@example.com" },
]
dependencies = [
    "PySide6>=6.6.0,<7.0",
    "SQLAlchemy>=2.0.0,<3.0",
    "alembic>=1.13.0,<2.0",
    "python-docx>=1.1.0,<2.0",
    "docxtpl>=0.16.0,<1.0",
    "matplotlib>=3.8.0,<4.0",
    "loguru>=0.7.0,<1.0",
    "pydantic>=2.5.0,<3.0",
    "pydantic-settings>=2.1.0,<3.0",
    "python-dateutil>=2.8.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0",
    "pytest-qt>=4.2.0,<5.0",
    "ruff>=0.1.0,<1.0",
    "mypy>=1.7.0,<2.0",
    "pre-commit>=3.5.0,<4.0",
    "pyinstaller>=6.3.0,<7.0",
]

[project.scripts]
clinic-lor = "clinic.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["clinic*"]

[tool.setuptools.package-data]
"clinic" = ["catalogs/*.json", "i18n/*.json", "resources/**/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
