[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinic-lor-desktop"
version = "0.1.0"
description = "LOR klinikasi uchun desktop dasturi (uz/ru)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Arislanars", email = "arislanars06@example.com" },
]
dependencies = [
    "PySide6>=6.6.0,<7.0",
    "SQLAlchemy>=2.0.0,<3.0",
    "alembic>=1.13.0,<2.0",
    "python-docx>=1.1.0,<2.0",
    "docxtpl>=0.16.0,<1.0",
    "matplotlib>=3.8.0,<4.0",
    "loguru>=0.7.0,<1.0",
    "pydantic>=2.5.0,<3.0",
    "pydantic-settings>=2.1.0,<3.0",
    "python-dateutil>=2.8.0,<3.0",
    # ---- Web (optional layer served by ``clinic.web``) ----
    "fastapi>=0.111.0,<1.0",
    "uvicorn[standard]>=0.29.0,<1.0",
    "jinja2>=3.1.0,<4.0",
    "python-multipart>=0.0.9,<1.0",
    "itsdangerous>=2.1.0,<3.0",
    # Renders the reception docx to HTML for the browser preview so the
    # operator sees the actual template output (their letterhead + real
    # patient data) rather than a generic programmatic layout.
    "mammoth>=1.7.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0",
    "pytest-qt>=4.2.0,<5.0",
    "ruff>=0.1.0,<1.0",
    "mypy>=1.7.0,<2.0",
    "pre-commit>=3.5.0,<4.0",
    "pyinstaller>=6.3.0,<7.0",
    "httpx>=0.27.0,<1.0",  # FastAPI TestClient dependency
]

[project.scripts]
clinic-lor = "clinic.main:main"
clinic-web = "clinic.web.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["clinic*"]

[tool.setuptools.package-data]
"clinic" = [
    "catalogs/*.json",
    "i18n/*.json",
    "resources/**/*",
    "web/templates/**/*.html",
    "web/static/**/*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
# E501: long lines are OK
# RUF001/RUF002/RUF003: Cyrillic characters look ambiguous to ruff but are
#   fully intentional in a bilingual (uz/ru) app.
# N802: closeEvent and friends are dictated by Qt's camelCase API.
ignore = ["E501", "RUF001", "RUF002", "RUF003", "N802"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
